<resources>
    <string name="app_name">QuizLit</string>
    <string name="action_settings">Settings</string>
    <string name="error_wrong_interface">The Activity does not implement the Handler interface</string>
    <string name="msg_correct">Correct!</string>
    <string name="msg_incorrect">Incorrect!</string>
    <string name="title_activity_cards">CardsActivity</string>
    <string name="error_field_empty">This field cannot be empty</string>
    <string name="dialog_create_card_title">New card</string>
    <string name="dialog_edit_card_title">Edit card</string>
    <string name="dialog_create_deck_title">New deck</string>
    <string name="dialog_edit_deck_title">Edit deck</string>
    <string name="channel_id">default</string>
    <string name="notification_content_title">Happy quiz day! ✌ ✌ ✌</string>
    <string name="notification_content_text">Don\'t forget to review your flashcards</string>
    <string name="btn_flip">Flip</string>
    <string name="btn_next">Next</string>
    <string name="btn_prev">Prev</string>
    <string name="quiz_score">Quiz score</string>
    <string name="card_answer">answer</string>
    <string name="btn_edit">Edit</string>
    <string name="card_question">question</string>
    <string name="btn_true">True</string>
    <string name="btn_false">False</string>
    <string name="hint_card_question">Enter question</string>
    <string name="cb_true">True</string>
    <string name="hint_deck_title">Title</string>
    <string name="btn_ok">OK</string>

</resources>
