<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="@color/color_white"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvFrontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_question"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvBackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_answer"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnEditCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_edit"/>

    </LinearLayout>

</android.support.v7.widget.CardView>